[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/TrackSwitch.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Track.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=3]
[ext_resource path="res://Resources/Theme1.tres" type="Theme" id=4]

[sub_resource type="Curve2D" id=3]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, -24.0172, 16.0049, 24.0172, -16.0049, 64, -16, 0, 0, 0, 0, 128, -32 )
}

[sub_resource type="Curve2D" id=4]
resource_local_to_scene = true
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, -23.902, -16.0644, 23.902, 16.0644, 64, 16, 0, 0, 0, 0, 128, 32 )
}

[node name="TrackSwitch" type="Node2D"]
script = ExtResource( 1 )

[node name="LeftTrack" parent="." instance=ExtResource( 2 )]
curve = SubResource( 3 )

[node name="Pointer" type="PathFollow2D" parent="LeftTrack"]
visible = false
position = Vector2( 64.0158, -15.9894 )
rotation = -0.557619
z_index = 2
offset = 66.7697

[node name="Sprite" type="Sprite" parent="LeftTrack/Pointer"]
texture = ExtResource( 3 )

[node name="RightTrack" parent="." instance=ExtResource( 2 )]
z_index = 1
curve = SubResource( 4 )

[node name="Pointer" type="PathFollow2D" parent="RightTrack"]
position = Vector2( 63.9926, 15.9739 )
rotation = 0.561529
z_index = 2
offset = 66.7452

[node name="Sprite" type="Sprite" parent="RightTrack/Pointer"]
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 100.0
margin_top = -12.0
margin_right = 124.0
margin_bottom = 12.0
theme = ExtResource( 4 )

[connection signal="wheel_at_head" from="LeftTrack" to="." method="_on_LeftTrack_wheel_at_head"]
[connection signal="wheel_at_tail" from="LeftTrack" to="." method="_on_LeftTrack_wheel_at_tail"]
[connection signal="wheel_at_head" from="RightTrack" to="." method="_on_RightTrack_wheel_at_head"]
[connection signal="wheel_at_tail" from="RightTrack" to="." method="_on_RightTrack_wheel_at_tail"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
